--- a/css/style.css
+++ b/css/style.css
@@ -153,25 +153,33 @@ a:hover, a:focus, a:active {
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
   }
-}
-
-@media (min-width: 768px) {
-  section.resume-section {
-    min-height: 100vh;
+  .flex-column {
+    flex-direction: column !important;
   }
-  section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
-  }
-}
-
-@media (min-width: 992px) {
-  section.resume-section {
-    padding-top: 3rem !important;
-    padding-bottom: 3rem !important;
+  .resume-date .text-primary {
+    display: table !important;
+    width: 100%;
+    text-align: left !important;
   }
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
+  nav {
+    display: none !important;
+  }
+  li {
+    text-align: justify;
+    padding-right: 18px;
+  }
+  #page-top {
+    padding-left: 0 !important;
+  }
+  .desktop {
+    display: none;
+  }
+  .my-auto {
+    width: 100%;
+  }
   .m-center {
     text-align: center !important;
   }
@@ -185,20 +193,30 @@ a:hover, a:focus, a:active {
   .m-hidden {
     display: none;
   }
-  li {
-  text-align: justify;
-  padding-right: 18px;
-  }
   .list-inline-item {
     padding-right: 0 !important;
   }
   .list-inline-item:not(:last-child) {
     margin-right: 0 !important;
   }
-}
-
-@media (max-height: 440px) {
-  .img-profile {
-    display: none !important;
+  .mb-5, .mb-0, p, .subheading {
+    text-align: center !important;
+  }
+  .fa-ul {
+    margin-left: 18px !important;
+  }
+  .fa-ul li {
+    text-align: center;
+  }
+  .list-social-icons {
+    margin-top: 80px !important;
+  }
+  .flex-column {
+    flex-direction: column !important;
+  }
+  .resume-date .text-primary {
+    display: table !important;
+    width: 100%;
+    text-align: center !important;
   }
 }
