--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,15 @@ a:hover, a:focus, a:active {
   }
 }
 
+@media (min-width: 768px) {
+  section.resume-section {
+    min-height: 100vh;
+  }
+  section.resume-section .resume-item .resume-date {
+    min-width: 18rem;
+  }
+}
+
 @media (max-width: 1024px) {
   nav {
     display: none !important;
