--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a:hover, a:focus, a:active {
   .desktop {
     display: none;
   }
-  .my-auto {
+  .mr-auto {
     width: 100%;
   }
   .m-center {
