--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,12 @@ body {
 }
 
 @media (min-width: 992px) {
+  
   body {
     padding-top: 0;
     padding-left: 17rem;
   }
+  
 }
 
 h1,
@@ -116,6 +118,7 @@ a:hover, a:focus, a:active {
 }
 
 @media (min-width: 992px) {
+  
   #sideNav {
     text-align: center;
     position: fixed;
@@ -126,16 +129,19 @@ a:hover, a:focus, a:active {
     width: 17rem;
     height: 100vh;
   }
+  
   #sideNav .navbar-brand {
     display: flex;
     margin: auto auto 0;
     padding: 0.5rem;
   }
+  
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
     border: 0.3rem solid rgba(255, 255, 255, 0.2);
   }
+  
   #sideNav .navbar-collapse {
     display: flex;
     align-items: flex-start;
@@ -143,58 +149,75 @@ a:hover, a:focus, a:active {
     width: 100%;
     margin-bottom: auto;
   }
+  
   #sideNav .navbar-collapse .navbar-nav {
     flex-direction: column;
     width: 100%;
   }
+  
   #sideNav .navbar-collapse .navbar-nav .nav-item {
     display: block;
   }
+  
   #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
     display: block;
   }
+  
   .flex-column {
     flex-direction: column !important;
   }
+  
   .resume-date .text-primary {
     display: table !important;
     width: 100%;
     text-align: left !important;
   }
+  
 }
 
 @media (min-width: 768px) {
+  
   section.resume-section {
     min-height: 100vh;
   }
+  
   section.resume-section .resume-item .resume-date {
     min-width: 18rem;
   }
+  
 }
 
 @media (max-width: 1024px) {
+  
   nav {
     display: none !important;
   }
+  
   li {
     text-align: justify;
     padding-right: 18px;
   }
+  
   #page-top {
     padding-left: 0 !important;
   }
+  
   .desktop {
     display: none;
   }
+  
   .mr-auto {
     width: 100%;
   }
+  
   .m-center {
     text-align: center !important;
   }
+  
   .m-top-margin {
     margin: 18px 0 18px 0 !important;
   }
+  
   .list-inline {
     text-align: center;
     padding-left: 0;
@@ -202,30 +225,40 @@ a:hover, a:focus, a:active {
   .m-hidden {
     display: none;
   }
+  
   .list-inline-item {
     padding-right: 0 !important;
   }
+  
   .list-inline-item:not(:last-child) {
     margin-right: 0 !important;
   }
+  
   .mb-5, .mb-0, p, .subheading {
     text-align: center !important;
+    padding: 0 !important;
   }
+  
   .fa-ul {
     margin-left: 18px !important;
   }
+  
   .fa-ul li {
     text-align: center;
   }
+  
   .list-social-icons {
     margin-top: 80px !important;
   }
+  
   .flex-column {
     flex-direction: column !important;
   }
+  
   .resume-date .text-primary {
     display: table !important;
     width: 100%;
     text-align: center !important;
   }
+  
 }
